Start impl window prediction